--- a/scatter_plot_age_vs_height.ipynb
+++ b/scatter_plot_age_vs_height.ipynb
@@ -55,8 +55,8 @@
       "source": [
         "# Set values for variables for age for children cutoff and colors for gender\n",
         "age_cutoff_children = 16\n",
-        "color_female = 'red'\n",
-        "color_male = 'blue'"
+        "color_female = 'yellow'\n",
+        "color_male = 'black'"
       ]
     },
     {
